# mocanet

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: base.yaml  copy_task.yaml  text_cls.yaml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  INTERACTIVE_INFERENCE.md  README.md  SST2_INTEGRATION.md
scripts/: debug_data.py  demo_interactive.py  interactive_inference.py  plot_runs.py  test_model_quality.py  test_sst2.py
src/mocanet/: __init__.py  ablation.py  config.py  data.py  eval.py  layers.py  model.py  sst2_dataset.py  train.py  utils.py
tests/: test_interactive_inference.py  test_layers.py  test_smoke.py
